--- a/vp_react_modale/package.json
+++ b/vp_react_modale/package.json
@@ -1,9 +1,12 @@
 {
   "name": "vp_react_modale",
   "description": "A React modal component",
-  "author": "Valentin PIERRE",
+  "author": "Valentin",
   "keywords": ["react", "components", "modal"],
-  "version": "0.1.0",
+  "version": "0.1.4",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "files": [ "dist", "README.md" ],
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "@testing-library/jest-dom": "^5.16.5",
@@ -16,7 +19,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files",
+    "build": "rmdir /s /q dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
